// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-1o5c7b1,
[data-css-1o5c7b1] {
  -webkit-transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  -webkit-transform: rotate(45deg);
  width: 22px;
  height: 22px;
  display: inline-block;
  vertical-align: middle;
  position: relative;
  transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  transform: rotate(45deg);
}

.css-1o5c7b1::before,
[data-css-1o5c7b1]::before {
  width: 4px;
  height: 11px;
  left: 9px;
  top: 18px;
  border-radius: 2px;
  background-color: #974BE0;
  position: absolute;
  content: "";
}

.css-1o5c7b1::after,
[data-css-1o5c7b1]::after {
  width: 14px;
  height: 14px;
  left: 0px;
  top: 0px;
  border-radius: 16px;
  border: 4px solid #974BE0;
  position: absolute;
  content: "";
}

<StyledSpan>
  <span
    className="css-1o5c7b1"
  />
</StyledSpan>
`;

exports[`enzyme.mount 2`] = `
.css-jiovv2,
[data-css-jiovv2] {
  -webkit-transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  -webkit-transform: rotate(-45deg);
  width: 22px;
  height: 22px;
  display: inline-block;
  vertical-align: middle;
  position: relative;
  transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  transform: rotate(-45deg);
}

.css-jiovv2::before,
[data-css-jiovv2]::before {
  width: 4px;
  height: 11px;
  left: 9px;
  top: 18px;
  border-radius: 2px;
  background-color: #974BE0;
  position: absolute;
  content: "";
}

.css-jiovv2::after,
[data-css-jiovv2]::after {
  width: 14px;
  height: 14px;
  left: 0px;
  top: 0px;
  border-radius: 16px;
  border: 4px solid #974BE0;
  position: absolute;
  content: "";
}

<StyledSpan
  open={true}
>
  <span
    className="css-jiovv2"
  />
</StyledSpan>
`;

exports[`enzyme.render 1`] = `
.css-1o5c7b1,
[data-css-1o5c7b1] {
  -webkit-transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  -webkit-transform: rotate(45deg);
  width: 22px;
  height: 22px;
  display: inline-block;
  vertical-align: middle;
  position: relative;
  transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  transform: rotate(45deg);
}

.css-1o5c7b1::before,
[data-css-1o5c7b1]::before {
  width: 4px;
  height: 11px;
  left: 9px;
  top: 18px;
  border-radius: 2px;
  background-color: #974BE0;
  position: absolute;
  content: "";
}

.css-1o5c7b1::after,
[data-css-1o5c7b1]::after {
  width: 14px;
  height: 14px;
  left: 0px;
  top: 0px;
  border-radius: 16px;
  border: 4px solid #974BE0;
  position: absolute;
  content: "";
}

<span
  class="css-1o5c7b1"
/>
`;

exports[`enzyme.render 2`] = `
.css-jiovv2,
[data-css-jiovv2] {
  -webkit-transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  -webkit-transform: rotate(-45deg);
  width: 22px;
  height: 22px;
  display: inline-block;
  vertical-align: middle;
  position: relative;
  transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  transform: rotate(-45deg);
}

.css-jiovv2::before,
[data-css-jiovv2]::before {
  width: 4px;
  height: 11px;
  left: 9px;
  top: 18px;
  border-radius: 2px;
  background-color: #974BE0;
  position: absolute;
  content: "";
}

.css-jiovv2::after,
[data-css-jiovv2]::after {
  width: 14px;
  height: 14px;
  left: 0px;
  top: 0px;
  border-radius: 16px;
  border: 4px solid #974BE0;
  position: absolute;
  content: "";
}

<span
  class="css-jiovv2"
/>
`;

exports[`enzyme.shallow 1`] = `
.css-1o5c7b1,
[data-css-1o5c7b1] {
  -webkit-transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  -webkit-transform: rotate(45deg);
  width: 22px;
  height: 22px;
  display: inline-block;
  vertical-align: middle;
  position: relative;
  transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  transform: rotate(45deg);
}

.css-1o5c7b1::before,
[data-css-1o5c7b1]::before {
  width: 4px;
  height: 11px;
  left: 9px;
  top: 18px;
  border-radius: 2px;
  background-color: #974BE0;
  position: absolute;
  content: "";
}

.css-1o5c7b1::after,
[data-css-1o5c7b1]::after {
  width: 14px;
  height: 14px;
  left: 0px;
  top: 0px;
  border-radius: 16px;
  border: 4px solid #974BE0;
  position: absolute;
  content: "";
}

<span
  className="css-1o5c7b1"
/>
`;

exports[`enzyme.shallow 2`] = `
.css-jiovv2,
[data-css-jiovv2] {
  -webkit-transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  -webkit-transform: rotate(-45deg);
  width: 22px;
  height: 22px;
  display: inline-block;
  vertical-align: middle;
  position: relative;
  transition: all 0.4s cubic-bezier(0.650, -0.600, 0.240, 1.650);
  transform: rotate(-45deg);
}

.css-jiovv2::before,
[data-css-jiovv2]::before {
  width: 4px;
  height: 11px;
  left: 9px;
  top: 18px;
  border-radius: 2px;
  background-color: #974BE0;
  position: absolute;
  content: "";
}

.css-jiovv2::after,
[data-css-jiovv2]::after {
  width: 14px;
  height: 14px;
  left: 0px;
  top: 0px;
  border-radius: 16px;
  border: 4px solid #974BE0;
  position: absolute;
  content: "";
}

<span
  className="css-jiovv2"
/>
`;
